--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '8080:8080'
     volumes:
-      - ../jenkins:/var/jenkins_home:z
+      - ../jenkins-host:/var/jenkins_home:z
     networks:
       - sdk
 
@@ -19,7 +19,7 @@ services:
     networks:
       - sdk
     volumes:
-      - ../agent:/app:z
+      - .:/var/opt/kitsunetsuki-sdk:z
     command: bash -c "mkdir /run/sshd && /usr/sbin/sshd -D"
 
   sdk:
@@ -27,9 +27,9 @@ services:
       context: .
       dockerfile: Dockerfile.sdk
     volumes:
-      - ../agent:/app:z
+      - .:/var/opt/kitsunetsuki-sdk:z
       - ~/Dev/Panda3D:/root/Dev/Panda3D:z
-      - ~/Games/steam/steamapps/common/Blender:/root/Blender:z
+      - ~/var/mnt/games/steamapps/common/Blender:/root/Blender:z
       - ~/Public:/root/Public:z
     command: bash -c "mkdir /run/sshd && /usr/sbin/sshd -D"
     network_mode: "slirp4netns:allow_host_loopback=true"
