--- a/jobs/panda3d-extras.yml
+++ b/jobs/panda3d-extras.yml
@@ -47,43 +47,43 @@
     jobs:
         - 'panda3d{variant}-{module}-{arch}':
             arch: lynx64
-            build: /app/build/panda3d-kphys
-            bullet_dir: /app/opt/bullet/
+            build: /var/opt/kitsunetsuki-sdk/build/panda3d-kphys
+            bullet_dir: /var/opt/kitsunetsuki-sdk/dist/bullet/
             desc: Physics extensions for Panda3D
             generator: Unix Makefiles
-            install: /app/opt/panda3d-kphys/lib/python3.13t/site-packages
-            interrogate_executable: /app/opt/interrogate/bin/interrogate
-            interrogate_module_executable: /app/opt/interrogate/bin/interrogate_module
-            interrogate_source: /app/jenkins/workspace/interrogate-lynx64
+            install: /var/opt/kitsunetsuki-sdk/dist/panda3d-kphys/lib/python3.13t/site-packages
+            interrogate_executable: /var/opt/kitsunetsuki-sdk/dist/interrogate/bin/interrogate
+            interrogate_module_executable: /var/opt/kitsunetsuki-sdk/dist/interrogate/bin/interrogate_module
+            interrogate_source: /var/opt/kitsunetsuki-sdk/jenkins/workspace/interrogate-lynx64
             make: '-j 16'
             module: kphys
             node: linux
-            panda3d_dir: /app/opt/panda3d/
-            python_executable: /app/opt/python/bin/python3.13t
-            python_include: /app/opt/python/include/python3.13t
-            python_library: /app/opt/python/lib/libpython3.13t.so.1.0
+            panda3d_dir: /var/opt/kitsunetsuki-sdk/dist/panda3d/
+            python_executable: /var/opt/kitsunetsuki-sdk/dist/python/bin/python3.13t
+            python_include: /var/opt/kitsunetsuki-sdk/dist/python/include/python3.13t
+            python_library: /var/opt/kitsunetsuki-sdk/dist/python/lib/libpython3.13t.so.1.0
             variant: ''
-            version: '0.7.7'
+            version: '0.7.9'
             with_tests: ON
         - 'panda3d{variant}-{module}-{arch}':
             arch: lynx64
-            build: /app/build/panda3dnt-kphys
-            bullet_dir: /app/opt/bullet/
+            build: /var/opt/kitsunetsuki-sdk/build/panda3dnt-kphys
+            bullet_dir: /var/opt/kitsunetsuki-sdk/dist/bullet/
             desc: Physics extensions for Panda3D
             generator: Unix Makefiles
-            install: /app/opt/panda3dnt-kphys/lib/python3.12/site-packages
-            interrogate_executable: /app/opt/interrogatent/bin/interrogate
-            interrogate_module_executable: /app/opt/interrogatent/bin/interrogate_module
-            interrogate_source: /app/jenkins/workspace/interrogatent-lynx64
+            install: /var/opt/kitsunetsuki-sdk/dist/panda3dnt-kphys/lib/python3.12/site-packages
+            interrogate_executable: /var/opt/kitsunetsuki-sdk/dist/interrogatent/bin/interrogate
+            interrogate_module_executable: /var/opt/kitsunetsuki-sdk/dist/interrogatent/bin/interrogate_module
+            interrogate_source: /var/opt/kitsunetsuki-sdk/jenkins/workspace/interrogatent-lynx64
             make: '-j 16'
             module: kphys
             node: linux
-            panda3d_dir: /app/opt/panda3dnt/
-            python_executable: /app/opt/pythonnt/bin/python3.12
-            python_include: /app/opt/pythonnt/include/python3.12
-            python_library: /app/opt/pythonnt/lib/libpython3.12.so.1.0
+            panda3d_dir: /var/opt/kitsunetsuki-sdk/dist/panda3dnt/
+            python_executable: /var/opt/kitsunetsuki-sdk/dist/pythonnt/bin/python3.12
+            python_include: /var/opt/kitsunetsuki-sdk/dist/pythonnt/include/python3.12
+            python_library: /var/opt/kitsunetsuki-sdk/dist/pythonnt/lib/libpython3.12.so.1.0
             variant: nt
-            version: '0.7.7'
+            version: '0.7.9'
             with_tests: ON
         - 'panda3d{variant}-{module}-{arch}':
             arch: winx64
@@ -103,7 +103,7 @@
             python_include: 'D:\\opt\\python\\include'
             python_library: 'D:\\opt\\python\\libs\\python313t.lib'
             variant: ''
-            version: '0.7.7'
+            version: '0.7.9'
             with_tests: OFF
         - 'panda3d{variant}-{module}-{arch}':
             arch: winx64
@@ -123,45 +123,45 @@
             python_include: 'D:\\opt\\pythonnt\\include'
             python_library: 'D:\\opt\\pythonnt\\libs\\python312.lib'
             variant: nt
-            version: '0.7.7'
+            version: '0.7.9'
             with_tests: OFF
         - 'panda3d{variant}-{module}-{arch}':
             arch: lynx64
-            build: /app/build/panda3d-krender
-            bullet_dir: /app/opt/bullet/
+            build: /var/opt/kitsunetsuki-sdk/build/panda3d-krender
+            bullet_dir: /var/opt/kitsunetsuki-sdk/dist/bullet/
             desc: Custom Deferred Render Pipeline for Panda3D
             generator: Unix Makefiles
-            install: /app/opt/panda3d-krender/lib/python3.13t/site-packages
-            interrogate_executable: /app/opt/interrogate/bin/interrogate
-            interrogate_module_executable: /app/opt/interrogate/bin/interrogate_module
-            interrogate_source: /app/jenkins/workspace/interrogate-lynx64
+            install: /var/opt/kitsunetsuki-sdk/dist/panda3d-krender/lib/python3.13t/site-packages
+            interrogate_executable: /var/opt/kitsunetsuki-sdk/dist/interrogate/bin/interrogate
+            interrogate_module_executable: /var/opt/kitsunetsuki-sdk/dist/interrogate/bin/interrogate_module
+            interrogate_source: /var/opt/kitsunetsuki-sdk/jenkins/workspace/interrogate-lynx64
             make: '-j 16'
             module: krender
             node: linux
-            panda3d_dir: /app/opt/panda3d/
-            python_executable: /app/opt/python/bin/python3.13t
-            python_include: /app/opt/python/include/python3.13t
-            python_library: /app/opt/python/lib/libpython3.13t.so.1.0
+            panda3d_dir: /var/opt/kitsunetsuki-sdk/dist/panda3d/
+            python_executable: /var/opt/kitsunetsuki-sdk/dist/python/bin/python3.13t
+            python_include: /var/opt/kitsunetsuki-sdk/dist/python/include/python3.13t
+            python_library: /var/opt/kitsunetsuki-sdk/dist/python/lib/libpython3.13t.so.1.0
             variant: ''
             version: '0.2.10'
             with_tests: ON
         - 'panda3d{variant}-{module}-{arch}':
             arch: lynx64
-            build: /app/build/panda3dnt-krender
-            bullet_dir: /app/opt/bullet/
+            build: /var/opt/kitsunetsuki-sdk/build/panda3dnt-krender
+            bullet_dir: /var/opt/kitsunetsuki-sdk/dist/bullet/
             desc: Custom Deferred Render Pipeline for Panda3D
             generator: Unix Makefiles
-            install: /app/opt/panda3dnt-krender/lib/python3.12/site-packages
-            interrogate_executable: /app/opt/interrogatent/bin/interrogate
-            interrogate_module_executable: /app/opt/interrogatent/bin/interrogate_module
-            interrogate_source: /app/jenkins/workspace/interrogatent-lynx64
+            install: /var/opt/kitsunetsuki-sdk/dist/panda3dnt-krender/lib/python3.12/site-packages
+            interrogate_executable: /var/opt/kitsunetsuki-sdk/dist/interrogatent/bin/interrogate
+            interrogate_module_executable: /var/opt/kitsunetsuki-sdk/dist/interrogatent/bin/interrogate_module
+            interrogate_source: /var/opt/kitsunetsuki-sdk/jenkins/workspace/interrogatent-lynx64
             make: '-j 16'
             module: krender
             node: linux
-            panda3d_dir: /app/opt/panda3dnt/
-            python_executable: /app/opt/pythonnt/bin/python3.12
-            python_include: /app/opt/pythonnt/include/python3.12
-            python_library: /app/opt/pythonnt/lib/libpython3.12.so.1.0
+            panda3d_dir: /var/opt/kitsunetsuki-sdk/dist/panda3dnt/
+            python_executable: /var/opt/kitsunetsuki-sdk/dist/pythonnt/bin/python3.12
+            python_include: /var/opt/kitsunetsuki-sdk/dist/pythonnt/include/python3.12
+            python_library: /var/opt/kitsunetsuki-sdk/dist/pythonnt/lib/libpython3.12.so.1.0
             variant: nt
             version: '0.2.10'
             with_tests: ON
